fix spacing in tracker commands

--- a/mamar-web/src/app/doc/Tracker.module.scss
+++ b/mamar-web/src/app/doc/Tracker.module.scss
@@ -39,4 +39,5 @@
     border: 1px solid #00000020;
     background: #00000020;
     padding: 2px;
+    margin: 0 4px;
 }
